# aws-grant-user-access

./: .gitallowed  .gitignore  .pre-commit-config.yaml  .remarkrc.yaml  Dockerfile  Makefile  README.md  bandit.yaml  main.py  mypy.ini  pyproject.toml  tg.Dockerfile
aws_grant_user_access/src/: __init__.py  expired_policy_cleaner.py  grant_time_window.py  main.py  notifier.py  policy_creator.py  policy_manager.py  process_event.py
aws_grant_user_access/src/clients/: __init__.py  aws_client_factory.py  aws_iam_client.py  aws_sns_client.py
aws_grant_user_access/src/config/: config.py
aws_grant_user_access/src/data/: data.py  exceptions.py  severity.py
docs/: aws-grant-user-access-architecture.drawio  pre-commit.md
scripts/: apply.sh  plan.sh  release.sh
terraform/: iam.tf  lambda.tf  vars.tf
terraform/bootstrap/: README.md
terraform/bootstrap/labs/: terragrunt.hcl
terraform/bootstrap/live/: terragrunt.hcl
terraform/ci/: terragrunt.hcl
terraform/ci/container_release/: terragrunt.hcl
terraform/ci/networking/: terragrunt.hcl
terraform/ci/pipeline/: terragrunt.hcl
terraform/ci/pull_request_builder/: terragrunt.hcl
terraform/common/: labs.hcl  live.hcl
terraform/labs/: terragrunt.hcl
terraform/labs/lambda_grant_user_access/: terragrunt.hcl
terraform/live/: terragrunt.hcl
terraform/live/lambda_grant_user_access/: terragrunt.hcl
terraform/modules/access_log_bucket/: README.md  main.tf  outputs.tf  variables.tf
terraform/modules/bootstrap/: README.md  main.tf  outputs.tf  parameter_stores.tf  variables.tf
terraform/modules/bucket/: README.md  main.tf  outputs.tf  variables.tf
terraform/modules/ecr/: ecr.tf  iam.tf  variables.tf
terraform/modules/lambda/: iam.tf  lambda.tf  variables.tf
terraform/modules/lambda_grant_user_access/: README.md  main.tf  variables.tf  (+1 more)
tests/unit/: test_expired_policy_cleanup.py  test_grant_time_window.py  test_lambda_handler.py  test_notifier.py  test_policy_cleanup.py  test_policy_creator.py  test_policy_manager.py  test_process_event.py
(+55 files in other folders)
