[tool.poetry]
name = "aws-grant-user-access"
version = "0.1.0"
description = "Gives AWS IAM users acess to assume a role for a fixed window"
authors = []
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "aws_grant_user_access"}]

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.26.158"
jsonschema = "^4.17.3"
awslambdaric = "^2.0.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"
pytest-cov = "^4.1.0"
moto = "^5.0.9"
freezegun = "^1.2.2"
black = "^23.3.0"
bandit = "^1.7.5"
mypy = "^1.5.1"
types-jsonschema = "^4.17.0.10"
jsonschema = "^4.19.0"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
