[tool.poetry]
name = "aws-grant-user-access"
version = "0.1.0"
description = "Gives AWS IAM users acess to assume a role for a fixed window"
authors = []
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "aws_grant_user_access"}]

[tool.poetry.dependencies]
python = "^3.13"
boto3 = "~1.40.0"
jsonschema = "~4.25.0"
awslambdaric = "~3.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "~8.4.0"
pytest-cov = "~6.3.0"
freezegun = "~1.5.0"
black = "~25.1.0"
bandit = "~1.8.0"
mypy = "~1.17.0"
types-jsonschema = "~4.25.1.0"
flake8 = "~7.3.0"
moto = "~5.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
